tests/spec/emit/snapshots/map_entry_slice_append_tuple_field.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn main() {
    let mut m = Map.new<string, (Slice<int>, int)>()
    m["a"] = ([1], 2)
    let mut entry = (m["a"].0.clone(), m["a"].1)
    entry.0 = entry.0.append(3)
    m["a"] = entry
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"slices"
)

func main() {
	m := make(map[string]lisette.Tuple2[[]int, int])
	m["a"] = lisette.MakeTuple2[[]int, int]([]int{1}, 2)
	entry := lisette.MakeTuple2[[]int, int](slices.Clone(m["a"].First), m["a"].Second)
	entry.First = append(entry.First, 3)
	m["a"] = entry
}
