tests/spec/emit/snapshots/map_entry_slice_append_tuple_struct_field.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct Wrap(Slice<int>, int)\n\nfn main() {\n  let mut m = Map.new<string, Wrap>()\n  m[\"a\"] = Wrap([], 0)\n  let mut entry = m[\"a\"]\n  entry.0 = entry.0.append(2)\n  m[\"a\"] = entry\n}\n"
---
package main

import "fmt"

type Wrap struct {
	F0 []int
	F1 int
}

func (w Wrap) String() string {
	return fmt.Sprintf("Wrap(%v, %v)", w.F0, w.F1)
}

func main() {
	m := make(map[string]Wrap)
	m["a"] = Wrap{
		F0: ([]int)(nil),
		F1: 0,
	}
	entry := m["a"]
	entry.F0 = append(entry.F0, 2)
	m["a"] = entry
}
