tests/spec/emit/snapshots/map_equals.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(a: Map<string, int>, b: Map<string, int>) -> bool {
    a.equals(b)
  }
---
package main

import "maps"

func test(a, b map[string]int) bool {
	return maps.Equal(a, b)
}
