tests/spec/emit/snapshots/map_field_append_value_position.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Box {
    items: Slice<int>,
  }
  
  fn main() {
    let mut m = Map.new<string, Box>()
    m["a"] = Box { items: [1] }
    let xs = m["a"].items.append(2)
    let _ = xs
  }
---
package main

type Box struct {
	items []int
}

func main() {
	m := make(map[string]Box)
	m["a"] = Box{items: []int{1}}
	recv := m["a"].items
	xs := append(recv[:len(recv):len(recv)], 2)
	_ = xs
}
