tests/spec/emit/snapshots/map_field_assign_captures_key.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Pair { x: int }
  
  fn set_key(k: mut Ref<string>) -> int {
    k.* = "b"
    1
  }
  
  fn main() {
    let mut m = Map.new<string, Pair>()
    m["a"] = Pair { x: 0 }
    let mut k = "a"
    let captured_key = k
    let mut entry = m[captured_key]
    entry.x = set_key(&k)
    m[captured_key] = entry
    let _ = m
  }
---
package main

type Pair struct {
	x int
}

func setKey(k *string) int {
	*k = "b"
	return 1
}

func main() {
	m := make(map[string]Pair)
	m["a"] = Pair{x: 0}
	k := "a"
	captured_key := k
	entry := m[captured_key]
	entry.x = setKey(&k)
	m[captured_key] = entry
	_ = m
}
