tests/spec/emit/snapshots/map_field_assignment_dot_access_key_evaluated_once.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  struct Key { k: string }
  struct Box { x: int }
  
  fn make_key(counter: Ref<int>) -> Key {
    counter.* = counter.* + 1
    Key { k: "a" }
  }
  
  fn main() {
    let mut counter = 0
    let mut m = Map.from([("a", Box { x: 1 })])
    let key = make_key(&counter).k
    let mut entry = m[key]
    entry.x = 2
    m[key] = entry
    fmt.Println(counter)
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

type Key struct {
	k string
}

type Box struct {
	x int
}

func makeKey(counter *int) Key {
	*counter++
	return Key{k: "a"}
}

func main() {
	counter := 0
	m := lisette.MapFrom([]lisette.Tuple2[string, Box]{lisette.MakeTuple2[string, Box]("a", Box{x: 1})})
	key := makeKey(&counter).k
	entry := m[key]
	entry.x = 2
	m[key] = entry
	fmt.Println(counter)
}
