tests/spec/emit/snapshots/map_field_assignment_double_newtype.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct Inner { x: int }\nstruct A(Inner)\nstruct B(A)\n\nfn main() {\n  let mut m = Map.new<string, B>()\n  m[\"k\"] = B(A(Inner { x: 1 }))\n  let mut inner = m[\"k\"].0.0\n  inner.x = 2\n  m[\"k\"] = B(A(inner))\n}\n"
---
package main

type Inner struct {
	x int
}

type A Inner

type B A

func main() {
	m := make(map[string]B)
	m["k"] = B(A(Inner{x: 1}))
	inner := Inner(A(m["k"]))
	inner.x = 2
	m["k"] = B(A(inner))
}
