tests/spec/emit/snapshots/map_field_assignment_expression_position.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  struct Config {
    value: int,
  }
  
  fn main() {
    let mut m: mut Map<string, Config> = Map.new()
    m["a"] = Config { value: 1 }
    let _ = {
      let mut entry = m["a"]
      entry.value = 2
      m["a"] = entry
    }
    fmt.Println(m["a"].value)
  }
---
package main

import "fmt"

type Config struct {
	value int
}

func main() {
	m := make(map[string]Config)
	m["a"] = Config{value: 1}
	entry := m["a"]
	entry.value = 2
	m["a"] = entry
	fmt.Println(m["a"].value)
}
